[package]
name = "vialctl"
version = "0.2.5"
edition = "2024"
authors = ["Fredrik Storm <fredrik@fldc.se>"]
description = "Control Vial-compatible keyboards from the command line"
license = "MIT"
repository = "https://github.com/fldc/vialctl"

[dependencies]
hidapi = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "6"
